--- a/catalog.html
+++ b/catalog.html
@@ -39,18 +39,18 @@
     <main class="main-item">
       <div class="container">
         <div class="container-cataloge">
-          <aside class="fofm-lateral">
+          <aside class="form-lateral">
             <div class="main-form">
-              <form action="" method="post">
+              <form action="https://echo.htmlacademy.ru" method="post">
                 <div class="filter-item">
-                  <legend>Стоимость:</legend>
+                  <b class="tagline">Стоимость:</b>
                   <div class="range-filter">
                     <div class="range-controls">
                       <div class="scale">
                         <div class="bar"></div>
                       </div>
                       <div class="toggle toggle-min"></div>
-                        <div class="toggle toggle-max"></div>
+                      <div class="toggle toggle-max"></div>
                     </div>
                     <div class="price-controls">
                       <label class="min-price">от<input name="min-price" type="text" value="0"></label>
@@ -130,13 +130,13 @@
             <ul class="services">
               <li class="services-list">
                 <article class="services-item">
-                  <div class="points points-browser"><svg xmlns="http://www.w3.org/2000/svg" width="360" height="40" viewBox="0 0 360 40"><path d="M356 0H4C1.8 0 0 1.8 0 4v36h360V4c0-2.2-1.8-4-4-4zM22.991 27a7 7 0 1 1 0-14 7 7 0 0 1 0 14zm23.011 0a7 7 0 1 1 0-14 7 7 0 0 1 0 14zm23.011 0a7 7 0 1 1 0-14 7 7 0 0 1 0 14z"/></svg>
+                  <div class="points"><svg xmlns="http://www.w3.org/2000/svg" width="360" height="40" viewBox="0 0 360 40"><path d="M356 0H4C1.8 0 0 1.8 0 4v36h360V4c0-2.2-1.8-4-4-4zM22.991 27a7 7 0 1 1 0-14 7 7 0 0 1 0 14zm23.011 0a7 7 0 1 1 0-14 7 7 0 0 1 0 14zm23.011 0a7 7 0 1 1 0-14 7 7 0 0 1 0 14z"/></svg>
                   </div>
                   <div class="picture">
                     <img class="picture-list" src="img/img-sedona.jpg" width="360" height="576" alt="sedona">
                   </div>
                   <section class="information">
-                    <h2 class="head"><a href="">Sedona</a></h2>
+                    <h2 class="head"><a href="#">Sedona</a></h2>
                     <p class="text">Информационный сайт<br> для туристов</p>
                     <a class="link link-cataloge" href="#">9 900 руб.</a>
                   </section>
@@ -150,7 +150,7 @@
                     <img class="picture-list" src="img/img-pink.jpg" width="360" height="576" alt="pink app">
                   </div>
                   <section class="information">
-                    <h2><a href="">Pink App</a></h2>
+                    <h2><a class="link-head-list" href="#">Pink App</a></h2>
                     <p class="text">Продуктовый лендинг<br> приложения для iOS и Android</p>
                     <a class="link link-cataloge" href="#">9 900 руб.</a>
                   </section>
@@ -164,7 +164,7 @@
                     <img class="picture-list" src="img/img-barbershop.jpg" width="360" height="576" alt="barbershop">
                   </div>
                   <section class="information">
-                    <h2 class="head"><a href="">Barbershop</a></h2>
+                    <h2 class="head"><a href="#">Barbershop</a></h2>
                     <p class="text">Сайт салоны красоты.<br> Для мужчин, да.</p>
                     <a class="link link-cataloge" href="#">9 900р</a>
                   </section>
@@ -178,7 +178,7 @@
                     <img class="picture-list" src="img/img-mishka.jpg" width="360" height="576" alt="mishka">
                   </div>
                   <section class="information">
-                    <h2 class="head"><a href="">MISHKA</a></h2>
+                    <h2 class="head"><a href="#">MISHKA</a></h2>
                     <p class="text">Интернет-магазин<br> вязаных игрушек</p>
                     <a class="link link-cataloge" href="#">9 900 руб.</a>
                   </section>
@@ -192,7 +192,7 @@
                     <img class="picture-list" src="img/img-aplus.jpg" width="360" height="576" alt="aplus">
                   </div>
                   <section class="information">
-                    <h2 class="head"><a href="">A Plus</a></h2>
+                    <h2 class="head"><a href="#">A Plus</a></h2>
                     <p class="text">Лендинг курсов повышения<br> квалификации</p>
                     <a class="link link-cataloge" href="#">9 900 руб.</a>
                   </section>
@@ -206,7 +206,7 @@
                     <img class="picture-list" src="img/img-kvast.jpg" width="360" height="576" alt="kvast">
                   </div>
                   <section class="information">
-                    <h2 class="head"><a href="">КВАСТ</a></h2>
+                    <h2 class="head"><a href="#">КВАСТ</a></h2>
                     <p class="text">Промо-сайт производителя<br> крафтового кваса</p>
                     <a class="link link-cataloge" href="#">9 900 руб.</a>
                   </section>
@@ -227,7 +227,7 @@
         <div class="container container-form">
           <div class="modal-contacts">
             <h2 class="head">NЁRDS DESIGN STUDIO</h2>
-            <p class="text">191186, Санкт-Петербург,<br> ул. Б. Конюшенная, д. 19/8 <span class="contacts-phone">тел. +7 (812) 275-75-75</span></p>
+            <p class="text">191186, Санкт-Петербург, ул. Б. Конюшенная, д. 19/8 <span class="contacts-phone">тел. +7 (812) 275-75-75</span></p>
             <a class="link link-modal" href="#">Напишите нам</a>
           </div>
         </div>
