--- a/index.html
+++ b/index.html
@@ -70,20 +70,17 @@
         <section class="features">
           <h2 class="visually-hidden">Услуги</h2>
           <ul class="features-list">
-            <li class="features-item">
-              <div class="features-item-red"></div>
+            <li class="features-item features-item-red">
               <h3 class="head">Веб-сайты</h3>
               <p class="text">Мир никогда не будет прежним после того как увидит ваш сайт!</p>
               <a class="link link-color link-red" href="#">Заказать</a>
             </li>
-            <li class="features-item">
-              <div class="features-item-green"></div>
+            <li class="features-item features-item-green">
               <h3 class="head">Приложения</h3>
               <p class="text">Покорите топ-10 приложений в AppStore и Google Play</p>
               <a class="link link-color link-green" href="#">Заказать</a>
             </li>
-            <li class="features-item">
-              <div class="features-item-yellow"></div>
+            <li class="features-item features-item-yellow">
               <h3 class="head">Презентации</h3>
               <p class="text">Вы даже не подозреваете, насколько вы изумительны!</p>
               <a class="link link-color link-yellow" href="#">Заказать</a>
@@ -92,8 +89,8 @@
         </section>
         <article class="description">
           <section class="description-list">
-            <b class="tagline cry">Мы &#8211; маленькая, но гордая<br> дизайн-студия из Краснодара.</b>
-            <p class="text">Исповедуем принципы минимализма и чистоты. Ставим математический расчет<br> превыше креатива. Работаем не покладая рук, как роботы.</p>
+            <b class="tagline cry">Мы &#8211; маленькая, но гордая дизайн-студия из Краснодара.</b>
+            <p class="text">Исповедуем принципы минимализма и чистоты. Ставим математический расчет превыше креатива. Работаем не покладая рук, как роботы.</p>
             <b class="tagline job">Выполняем заказы на разработку:</b>
             <ul class="offers-list">
               <li class="offers-item">Веб-сайтов любой сложности</li>
@@ -101,9 +98,7 @@
               <li class="offers-item">Слайдшоу и видео для корпоративных презентаций</li>
             </ul>
           </section>
-          <aside class="statistics">
-            <div class="logo-galery">
-            </div>
+          <aside class="statistics logo-galery">
             <b class="tagline job">с 2004 года Любим точность во всем:</b>
             <table class="main-table">
               <tr class="table-list percentages">
@@ -141,7 +136,7 @@
         <div class="container container-form">
           <div class="modal-contacts">
             <h2 class="head">NЁRDS DESIGN STUDIO</h2>
-            <p class="text">191186, Санкт-Петербург,<br> ул. Б. Конюшенная, д. 19/8 <span class="contacts-phone">тел. +7 (812) 275-75-75</span></p>
+            <p class="text">191186, Санкт-Петербург, ул. Б. Конюшенная, д. 19/8 <span class="contacts-phone">тел. +7 (812) 275-75-75</span></p>
             <a class="link link-modal" href="#">Напишите нам</a>
           </div>
         </div>
