--- a/catalog.html
+++ b/catalog.html
@@ -3,8 +3,8 @@
   <head>
     <meta charset="utf-8">
     <title>HTML Academy: Нёрдс</title>
-    <link rel="stylesheet" href="css/normalize.css">
-    <link rel="stylesheet" href="css/main.css">
+    <link rel="stylesheet" href="css/normalize.min.css">
+    <link rel="stylesheet" href="css/main.min.css">
   </head>
   <body>
     <header class="main-header-list">
@@ -273,6 +273,6 @@
       </form>
       <button class="modal-close" type="button" aria-label="Закрыть форму"></button>
     </section>
-    <script src="js/style.js"></script>
+    <script src="js/main.min.js"></script>
   </body>
 </html>
