--- a/index.html
+++ b/index.html
@@ -3,8 +3,8 @@
   <head>
     <meta charset="utf-8">
     <title>HTML Academy: Нёрдс</title>
-    <link rel="stylesheet" href="css/normalize.css">
-    <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="css/normalize.min.css">
+    <link rel="stylesheet" href="css/main.min.css">
   </head>
   <body>
     <header class="main-header">
@@ -167,7 +167,7 @@
         <div class="login">
           <div class="login-name">
             <label class="login-name-item" for="name-field">Ваше имя:</label>
-            <input class="name-user" type="text" name="user" id="name-field" placeholder="Имя Фамилия" autofocus>
+            <input class="name-user" type="text" name="user" id="name-field" placeholder="Имя Фамилия">
           </div>
           <div class="login-email">
             <label class="login-email-item" for="email-field">Ваш e-mail:</label>
@@ -182,6 +182,6 @@
       </form>
       <button class="modal-close" type="submit" aria-label="Закрыть форму"></button>
     </section>
-    <script src="js/style.js"></script>
+    <script src="js/main.min.js"></script>
   </body>
 </html>
