--- a/catalog.html
+++ b/catalog.html
@@ -258,21 +258,21 @@
       <form class="modal-form" action="https://echo.htmlacademy.ru" method="post">
         <div class="login">
           <div class="login-name">
-            <label class="login-name-item" for="name-field">Ваше имя:</label>
-            <input class="name-user" type="text" name="name" id="name-field" placeholder="Имя Фамилия">
+            <label class="login-text login-name-item" for="name-field">Ваше имя:</label>
+            <input class="name-user" type="text" name="user" id="name-field" placeholder="Имя Фамилия">
           </div>
           <div class="login-email">
-            <label class="login-email-item" for="email-field">Ваш e-mail:</label>
+            <label class="login-text login-email-item" for="email-field">Ваш e-mail:</label>
             <input class="name-email" type="email" name="email" id="email-field" placeholder="email@example.com">
           </div>
         </div>
         <div class="login-textarea">
-          <label class="login-textarea-item" for="message-field">Текст письма:</label>
+          <label class="login-text login-textarea-item" for="message-field">Текст письма:</label>
           <textarea class="name-text" name="message" id="message-field" placeholder="В свободной форме" rows="5"></textarea>
         </div>
         <button class="link link-send" type="submit">Отправить</button>
       </form>
-      <button class="modal-close" type="button" aria-label="Закрыть форму"></button>
+      <button class="modal-close" type="submit" aria-label="Закрыть форму"></button>
     </section>
     <script src="js/main.min.js"></script>
   </body>
